force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Custom_Permission__c</fullName>
    <inlineHelpText>API name of the custom permission required for executing this action. If blank, all users can execute this action</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>