force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Display_Position__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Display_Position__c</fullName>
    <label>Display Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>