force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Flow_Name__c</fullName>
    <label>Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>