force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__List_Action_Availibility__c.field-meta.xml
<CustomField>
    <fullName>smartlists__List_Action_Availibility__c</fullName>
    <inlineHelpText>Define when the list buttons are enabled.
- When Records are Selected in the List: the action button is only enabled when users select records in the list. The selected records are passed to the flow
- When Records are Loaded: the action button is only enabled when records have been loaded in the list. The loaded records are passed to the flow
- Always: the action button is enabled all the time. The loaded records are passed to the flow</inlineHelpText>
    <label>List Action Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
                <default>true</default>
                <label>When Records are Selected</label>
            </value>
            <value>
                <fullName>Loaded</fullName>
                <label>When Records are Loaded</label>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>