force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Refresh_After_Execution__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Refresh_After_Execution__c</fullName>
    <label>Refresh After Execution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
                <default>true</default>
                <label>List</label>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>