force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Screenflow_Modal_Height__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Screenflow_Modal_Height__c</fullName>
    <inlineHelpText>Height in pixel of the Screenflow modal</inlineHelpText>
    <label>Screenflow: Modal Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>