force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Screenflow_Show_Label_in_Modal_Header__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Screenflow_Show_Label_in_Modal_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the label of the action is displayed in the modal header. Make sure to uncheck &apos;Show Header&apos; in the screens of the flow otherwise, the label is displayed twice.</description>
    <label>Screenflow: Show Label in Modal Header</label>
    <type>Checkbox</type>
</CustomField>