force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Smart_List_Definition__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Smart_List_Definition__c</fullName>
    <label>Smart List Definition</label>
    <referenceTo>smartlists__Smart_List_Definition__mdt</referenceTo>
    <relationshipLabel>Smart List Actions</relationshipLabel>
    <relationshipName>Smart_List_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>