force-app/main/default/objects/smartlists__Smart_List_Action__mdt/fields/smartlists__Type__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List Action</fullName>
                <default>true</default>
                <label>List Action</label>
            </value>
            <value>
                <fullName>Row Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>