force-app/main/default/objects/smartlists__Smart_List_Action__mdt/validationRules/smartlists__Check_List_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_List_Availability</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(smartlists__List_Action_Availibility__c) ) &amp;&amp;  ISPICKVAL( smartlists__Type__c , &apos;List Action&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__List_Action_Availibility__c</errorDisplayField>
    <errorMessage>List Action Availability is required for List Actions</errorMessage>
</ValidationRule>