force-app/main/default/objects/smartlists__Smart_List_Action__mdt/validationRules/smartlists__Check_Refresh_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Refresh_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(smartlists__Type__c, &apos;List Action&apos;) &amp;&amp; ISPICKVAL(smartlists__Refresh_After_Execution__c, &apos;Row&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__Refresh_After_Execution__c</errorDisplayField>
    <errorMessage>Refresh type can only be List for List Actions</errorMessage>
</ValidationRule>